color Fonde de pantalla

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap CDN</title>
 </head>
-<body>
+<body class="bg-primary">
     <div class="conteiner">
         <div class="display-1">Usando Bootstrap</div>
     </div>
