--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </nav>
           <!-- cierre barra de navegación  -->
 
-          <div class="display-1">Usando Bootstrap</div>
+          <div class="text-center display-2">PASIÓN POR EL FÚTBOL</div>
         
           <!-- carousel -->
           <div id="carouselExample" class="carousel slide">
