--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
             </button>
           </div>
            <!-- cierre de carousel -->
-            <!-- tabla -->
+            <!-- tabla --><table class="table table-bordered border-primary">
+  ...
+</table>
           
              
 
